# WRO_2024_Ball_Detector

./: .gitignore  CMakeLists.txt  README.txt
Python/: HSV.json  index.html  main.py
Python/Backup/Python/: main.py
Python/Spike/: main 1.llsp3  main 2.llsp3  main.py
Python/ev3dev/: main.py
model-parameters/: model_metadata.h  model_variables.h
sources/: httpServer.cpp  httpServer.h  impulse.h  main.cpp  mongoose.h  streamingServer.cpp  streamingServer.h
tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
